Fix demo index scrollbar

--- a/app/assets/stylesheets/demos/demos.css.scss
+++ b/app/assets/stylesheets/demos/demos.css.scss
@@ -61,7 +61,7 @@ div.demoIndexView {
 
 #demo-list {
   height: 100%;
-  overflow: scroll;
+  overflow: auto;
   padding-right: 20px;
   position: relative;
   padding-bottom: 200px;
